Ta med oppgavestatus og flyttete oppgaver